feat: add product-service with getAll, getByID, create endpoints
