# apis/product-service/swagger.yml
@@ -157,166 +157,6 @@ paths:
                   elapsed_time:
                     type: string
 
-  "/v2/customers/{id}":
-    get:
-      tags:
-        - CustomersV2
-      summary: Get a customer by ID (using Cache)
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: string
-      responses:
-        '200':
-          description: Customer details (using Cache)
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  message:
-                    type: string
-                  timestamp:
-                    type: string
-                    format: date-time
-                  elapsed_time:
-                    type: string
-                  data:
-                    type: object
-                    properties:
-                      customer:
-                        $ref: '#/components/schemas/Customer'
-
-  "/v1/customers/email/{email}":
-    get:
-      tags:
-        - CustomersV1
-      summary: Get a customer by email
-      parameters:
-        - name: email
-          in: path
-          required: true
-          schema:
-            type: string
-      responses:
-        '200':
-          description: Customer details by email
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  message:
-                    type: string
-                  timestamp:
-                    type: string
-                    format: date-time
-                  elapsed_time:
-                    type: string
-                  data:
-                    type: object
-                    properties:
-                      customer:
-                        $ref: '#/components/schemas/Customer'
-
-  "/v2/customers/email/{email}":
-    get:
-      tags:
-        - CustomersV2
-      summary: Get a customer by email (using Cache)
-      parameters:
-        - name: email
-          in: path
-          required: true
-          schema:
-            type: string
-      responses:
-        '200':
-          description: Customer details by email (using Cache)
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  message:
-                    type: string
-                  timestamp:
-                    type: string
-                    format: date-time
-                  elapsed_time:
-                    type: string
-                  data:
-                    type: object
-                    properties:
-                      customer:
-                        $ref: '#/components/schemas/Customer'
-
-  "/v1/customers/name/{name}":
-    get:
-      tags:
-        - CustomersV1
-      summary: Get a customer by name
-      parameters:
-        - name: name
-          in: path
-          required: true
-          schema:
-            type: string
-      responses:
-        '200':
-          description: Customer details by name
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  message:
-                    type: string
-                  timestamp:
-                    type: string
-                    format: date-time
-                  elapsed_time:
-                    type: string
-                  data:
-                    type: object
-                    properties:
-                      customer:
-                        $ref: '#/components/schemas/Customer'
-
-  "/v2/customers/name/{name}":
-    get:
-      tags:
-        - CustomersV2
-      summary: Get a customer by name (using cache)
-      parameters:
-        - name: name
-          in: path
-          required: true
-          schema:
-            type: string
-      responses:
-        '200':
-          description: Customer details by name (using cache)
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  message:
-                    type: string
-                  timestamp:
-                    type: string
-                    format: date-time
-                  elapsed_time:
-                    type: string
-                  data:
-                    type: object
-                    properties:
-                      customer:
-                        $ref: '#/components/schemas/Customer'
-
 components:
   schemas:
     Customer:
